# simbirHealth

./: .env  README  README.md  docker-compose.yaml  pyproject.toml  тз
account/: .env  Dockerfile  alembic.ini  config.py  docker-compose.yaml  loader.py  main.py  psycopg2-2.9.9-cp311-cp311-linux_x86_64.whl  pyproject.toml  requirements.txt
account/src/api/: account_router.py  auth_router.py  existing_router.py
account/src/auth/: AuthUtils.py  ProtectedAPIRouter.py
account/src/database/: Crud.py  database.py  models.py
account/src/database/cruds/: AdminCruds.py  UserCruds.py
account/src/migrations/: env.py
account/src/migrations/versions/: 00c9a8cd22f0_create_doctors.py  21903ed58564_.py  7fa33d65ddc4_init.py  81d065cf3abd_autoincrement.py  82fbb917e765_role_to_arraygererg.py  96cfd5df63fb_init3.py
account/src/schemas/: account.py  auth.py
account/src/utils/: utils.py
document/: .env  Dockerfile  alembic.ini  config.py  loader.py  main.py  pyproject.toml  requirements.txt
document/src/api/: changed_data_router.py  document_router.py
document/src/database/: Crud.py  models.py
document/src/database/cruds/: DocumentCruds.py
document/src/migrations/: env.py
document/src/migrations/versions/: 3195e9fd6ac1_init.py
document/src/schemas/: schemas.py
document/src/utils/: check_unique.py  utils.py
hospital/: .env  Dockerfile  alembic.ini  config.py  loader.py  main.py  pyproject.toml
hospital/src/api/: existing_router.py  hospital_router.py
hospital/src/auth/: ProtectedRouter.py
hospital/src/database/: Crud.py  database.py  models.py
hospital/src/migrations/: env.py
hospital/src/schemas/: hospitals.py
hospital/src/utils/: change_data.py  utils.py
src/: loader.py
src/account/: loader.py  main.py  pyproject.toml
src/account/api/: account_router.py
src/account/schemas/: account.py
src/account/src/schemas/: auth.py
src/document/: config.py
src/document/api/: document_router.py
src/hospital/: .env
src/hospital/api/: hospital_router.py
time_table/: .env  Dockerfile  config.py  loader.py  main.py  pyproject.toml  requirements.txt
time_table/database/: database.py
time_table/src/api/: changed_data_router.py  time_table_router.py
time_table/src/database/: Crud.py  models.py
time_table/src/database/cruds/: TimeTableCruds.py
time_table/src/migrations/: env.py
time_table/src/migrations/versions/: 0b5266275d68_add_column_gergoerg.py  2de8704325a7_add_column_enrolled_user_id.py  77e787080950_add_column_gergoergкпуошеп.py  e7c39eb35fe9_add_column_gergoergкпуошеппукшщукпщ.py  f9b9f1573f87_ini3rtger34345.py
time_table/src/schemas/: schemas.py
time_table/src/utils/: check_unique.py  utils.py
(+18 files in other folders)
