[tool.poetry]
name = "simbirhealth"
version = "0.1.0"
description = ""
authors = ["sweepy <dima10yashin@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["all"], version = "^0.115.0"}
pydantic = "^2.9.2"
sqlalchemy = "^2.0.35"
asyncpg = "^0.29.0"
uvicorn = "^0.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
